[gd_scene load_steps=4 format=3 uid="uid://dyotcvyxjphy2"]

[ext_resource type="Script" uid="uid://bo2hpw4pl04q6" path="res://scripts/inventory/inventory_menu.gd" id="1_f14m5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.2, 0.3, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.2, 0.4, 0.7, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.1, 0.25, 0.4, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.7, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="InventoryMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f14m5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "INVENTORY"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Use release button to free fish"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoSection" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Labels" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/InfoSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FishCount" type="Label" parent="Panel/MarginContainer/VBoxContainer/InfoSection/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Fish Count: 0"

[node name="TotalWeight" type="Label" parent="Panel/MarginContainer/VBoxContainer/InfoSection/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Total Weight: 0 / 0"

[node name="TotalValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/InfoSection/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Total Value: $0"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2")
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="FishGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 5

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Close"

[node name="SellDroneButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Sell Drone"
